changing window.scrollTo bahavior to auto on mobile chrome for testing scrolling bug on mobile

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ table {
 
 a {
     text-decoration: none;
+    outline: none;
 }
 
 p {
@@ -166,7 +167,7 @@ html {
     color: #666;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
 }
 
 body {
